# fesim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  README_en.md  hpc-err-log.txt
fesim/: CMakeLists.txt  cache_q_10  main.cpp  make.sh  plot.py  run-BTO.sh
qmat/: CMakeLists.txt  dipole.ini  main.cpp  qmat.py
qmat_v2/: main.cpp  make.sh  make_cph.sh  make_local.sh  run.sh
